--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 
-environments/
+environment.ts
 # Compiled output
 /dist
 /tmp
